css job image overflow bug fixes

--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -17,7 +17,9 @@
 
 .imageContainer {
     width: 100%;
+    height:auto;
     max-height: 10rem;
+    overflow: hidden;
 }
 
 .description p {
